<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Eatoo</string>
    <string name="home">홈</string>
    <string name="suggestion">제안</string>
    <string name="wishlist">찜</string>
    <string name="myPage">My</string>
    <string name="skip">skip</string>
    <string name="user_groups">님의\n"MATE GROUP"</string>
    <string name="user_groups_create">안녕하세요, 잇투님 ! 🖐\nMATE GROUP이 없어요</string>
    <string name="user_groups_create2">+ 를 눌러 새로운 그룹을 만들어보세요!\n더 다양한 기능을 사용할 수 있어요</string>
    <string name="main_today">Today</string>
    <string name="main_my_suggestion_mate">내가 제안한 MATE</string>
    <string name="main_my_suggestion_mate_together">함께 밥먹을 MATE를 제안해주세요!</string>
    <string name="main_review_food1">후기를 작성해주세요</string>
    <string name="main_review_food2">방문했던 가게에 대한\n별점 및 후기를 입력해주세요</string>
    <string name="main_group_member_count">+11</string>
    <string name="main_group_none_group_txt1">다양한 GROUP을\n만들어 EAT-TOO 해보세요</string>
    <string name="main_group_none_group_txt2">여러개의 그룹을 만들 수 있어요!</string>
    <string name="wishlist_store">찜한가게</string>
    <string name="no_wishlist">찜한 가게가 없습니다.</string>
    <string name="user_suggestion">님이 제안하신</string>
    <string name="user_suggestion2">MATE 입니다:)</string>
    <string name="user_suggestion_no">제안하신 MATE가 없습니다.</string>
    <string name="user_my_suggestion">내 제안</string>
    <string name="mate_suggestion_title">국밥 드실분</string>
    <string name="mate_suggestion_date">2021.06.21</string>
    <string name="mate_suggestion_restaurant">| 할머니 갈비탕</string>
    <string name="mate_suggestion_time" tools:ignore="TypographyDashes">| 12:00-12:40</string>
    <string name="mate_suggestion_start_time" tools:ignore="TypographyDashes">| 12:00</string>
    <string name="mate_suggestion_end_time" tools:ignore="TypographyDashes">-12:40</string>
    <string name="mate_suggestion_limit_people">5</string>
    <string name="group_suggestion">MATE 제안</string>
    <string name="group_suggestion_exp">님, 함께 식사할\nMATE를 찾아보세요 !</string>
    <string name="group_suggestion_exp2">그룹에 제안된 MATE가 없습니다.</string>
    <string name="group_suggestion_status0">전체보기</string>
    <string name="group_suggestion_status1">매칭중</string>
    <string name="group_suggestion_status2">매칭완료</string>
    <string name="group_mate_limit_people_exp">최대 5명</string>
    <string-array name="matestatus">
        <item>@string/group_suggestion_status0</item>
        <item>@string/group_suggestion_status1</item>
        <item>@string/group_suggestion_status2</item>
    </string-array>
    <string name="main_mate_suggestion">메이트 제안</string>
    <string name="main_mate_group">MATE GROUP</string>
    <string name="main_mate_suggestion_name">제안명</string>
    <string name="main_mate_suggestion_name_hint">제안명을 입력해주세요</string>
    <string name="main_mate_suggestion_store">가게</string>
    <string name="main_mate_suggestion_store_hint">가게를 입력해주세요</string>
    <string name="main_mate_suggestion_store_none_store">입력된 가게가 없습니다.</string>
    <string name="main_mate_suggestion_store_none_img">입력된 가게의 이미지가 없습니다.</string>
    <string name="main_mate_suggestion_meal_time">식사 시간</string>
    <string name="main_mate_suggestion_meal_time_hint">시간 입력</string>
    <string name="main_mate_suggestion_limit_people">제한 인원</string>
    <string name="main_mate_suggestion_limit_people_hint">제한인원을 입력해주세요</string>
    <string name="main_mate_suggestion_limit_time">제한마감 시간</string>
    <string name="main_mate_suggestion_limit_time_hint">시간을 입력해주세요</string>
    <string name="main_mate_suggestion_limit_time_hint2">마감시간이 되면 제안참여가 불가능하며, MATE 확정\n알림을 보내드립니다.</string>
    <string name="main_mate_suggestion_registration">등록하기</string>
    <string name="dialog_leave_mate_sugg_query1">뒤로 돌아가시겠습니까?</string>
    <string name="dialog_leave_mate_sugg_exp1">뒤로 돌아가시면 지금까지 입력하신 정보는</string>
    <string name="dialog_leave_mate_sugg_exp2">저장되지 않고 삭제됩니다.</string>
    <string name="delete_suggestion_query1">정말 \'%s\'</string>
    <string name="delete_suggestion_query2">MATE 제안을 삭제하시겠습니까?</string>
    <string name="delete_suggestion_exp1">삭제 시 \'%s\'님만 MATE에서 삭제되며</string>
    <string name="delete_suggestion_exp2">참여 MATE가 있는 경우, 제안은 그대로 유지됩니다.</string>
    <string name="my_review_user_title">님이 작성하신</string>
    <string name="is_review">후기입니다 :)</string>
    <string name="no_review">작성하신 후기가 없습니다.</string>
    <string name="create_review">후기 작성하기</string>
    <string name="one_over_two">1/2</string>
    <string name="two_over_two">2/2</string>
    <string name="store_location">가게 위치</string>
    <string name="input_store_location">가게 위치를 입력해주세요</string>
    <string name="find_store_via_map">지도에서 가게 위치 찾기</string>
    <string name="store_name">가게명</string>
    <string name="input_store_name">가게명을 입력해주세요</string>
    <string name="category">카테고리</string>
    <string name="category_chinese_food">중식</string>
    <string name="category_japanese_food">일식</string>
    <string name="category_western_food">양식</string>
    <string name="category_street_food">분식</string>
    <string name="category_korean_food">한식</string>
    <string name="category_asian_food">아시안</string>
    <string name="category_desert_food">디저트</string>
    <string name="category_etc_food">기타</string>
    <string name="next_step">다음으로</string>
    <string name="review_exp">이미 등록된 가게를 선택한 경우 가게명과 카테고리는</string>
    <string name="review_exp2">자동으로 입력됩니다. 새로운 가게의 경우, 직접 입력해주세요!</string>
    <string name="try_write_review">후기를 작성해보세요!</string>
    <string name="try_write_review_exp1">다녀왔던 가게에 대한 정보와\n평점, 후기를 꼭 작성해주세요 :)</string>
    <string name="try_write_review_exp2">평점, 후기를 꼭 작성해주세요 :)</string>
    <string name="my_review">내 후기</string>
    <string name="register_new_store">새로운 가게 등록</string>
    <string name="menu_name">메뉴명</string>
    <string name="input_menu_name">메뉴명을 작성해주세요</string>
    <string name="one_sentence_review">한줄평</string>
    <string name="input_review">30자 이내로 짧게 적어주세요</string>
    <string name="review_img">이미지</string>
    <string name="input_review_img">사진을 첨부해주세요</string>
    <string name="rating">별점</string>
    <string name="optional">(선택)</string>
    <string name="store_link">가게 정보 링크</string>
    <string name="input_store_link">가게링크를 입력해주세요</string>
    <string name="register">등록하기</string>
    <string name="no_search_result">검색 결과가 없습니다.</string>
    <string name="try_search_again">검색어를 다시 입력해주세요!</string>
    <string name="search_example" tools:ignore="TypographyDashes">예) 잇투동 12-13, 잇투로 456, 잇투아파트</string>
    <string name="goto_map">지도에서 찾기 ></string>
    <string name="nothing" />
    <string name="road_address">도로명</string>
    <string name="review_detail">후기 상세</string>
    <string name="edit_review">수정하기</string>
    <string name="dialog_register_new_store_query1">표시된 위치에 새로운 가게를</string>
    <string name="dialog_register_new_store_query2">등록하시겠습니까?</string>
    <string name="dialog_register_new_store_exp1">이미 등록된 동일 가게가 없는 경우, 새로운 가게</string>
    <string name="dialog_register_new_store_exp2">등록 후 계속해서 후기를 남길 수 있습니다</string>
    <string name="create_group_toolbar">그룹 만들기</string>
    <string name="create_group_suggest1">님의 MATE</string>
    <string name="create_group_suggest2">GROUP을 만들어보세요!</string>
    <string name="create_group_name">그룹명</string>
    <string name="create_group_name_suggest">그룹 이름을 입력해주세요</string>
    <string name="create_group_color">색상</string>
    <string name="create_group_keyword">키워드</string>
    <string name="create_group_keyword_exp">을 나타낼 수 있는</string>
    <string name="create_group_keyword_exp2">키워드를 입력해주세요!</string>
    <string name="create_group_location">위치</string>
    <string name="create_group_register">등록하기</string>
    <string name="create_group_change_location">변경하기</string>
    <string name="input_store_keyword">가게를 직접 입력해주세요</string>
    <string name="input_location">위치를 직접 입력해주세요</string>
    <string name="set_current_location">현 위치로 주소 설정하기</string>
    <string name="current_location">현재위치</string>
    <string name="search_address_fail">현 위치 주소를 가져오지 못 했습니다.</string>
    <string name="input_jwt_request">JWT를 입력해주세요.</string>
    <string name="invalid_jwt">유효하지 않은 JWT입니다.</string>
    <string name="invalid_account">현재 존재하지 않는 계정입니다.</string>
    <string name="input_group_name_request">그룹명을 입력해주세요.</string>
    <string name="input_color_request">색상을 입력해주세요.</string>
    <string name="input_latitude">위도를 입력해주세요.</string>
    <string name="input_longitude">경도를 입력해주세요.</string>
    <string name="check_group_name">그룹명 형식을 확인해주세요.</string>
    <string name="check_color_range">색상 입력 범위를 확인해주세요.</string>
    <string name="check_latitude">위도 입력 범위를 확인해주세요.</string>
    <string name="check_longitude">경도 입력 범위를 확인해주세요.</string>
    <string name="check_keyword_count">키워드 글자수를 확인해주세요.</string>
    <string name="failed_db_connection">데이터베이스 연결에 실패하였습니다.</string>
    <string name="search_location_fail">검색 결과를 가져오지 못 했습니다.</string>
    <string name="group_location">위치</string>
    <string name="call_group_members">%s 멤버분들!</string>
    <string name="vote_suggest">투표로 쉽고 빠른 선택하세요</string>
    <string name="new_vote">새로운 투표를</string>
    <string name="create_vote_end_sentence">만들어보세요</string>
    <string name="create_vote">투표 만들기</string>
    <string name="create_vote_suggest">투표를 만들어보세요!</string>
    <string name="vote_name">투표명</string>
    <string name="input_vote_name">투표명을 입력해주세요</string>
    <string name="vote_item">항목</string>
    <string name="input_vote_item">항목을 입력해주세요</string>
    <string name="vote_etc">기타</string>
    <string name="vote_due_date">마감시간 설정</string>
    <string name="vote_time_pm">오후 %d : %d</string>
    <string name="vote_time_am">오전 %d : %d</string>
    <string name="adding_vote_item_available">항목 추가 허용</string>
    <string name="multiple_vote_available">복수선택</string>
    <string name="anonymous_vote">익명투표</string>
    <string name="input_vote_name_toast">투표명을 입력해주세요</string>
    <string name="input_vote_keyword_toast">키워드를 입력해주세요</string>
    <string name="input_vote_item_toast">항목을 입력해주세요</string>
    <string name="keyword_num_limit">키워드는 최대 4개 입력 가능합니다.</string>
    <string name="keyword_length_limit">키워드는 최대 10 글자 입력 가능합니다.</string>
    <string name="failed_connection">통신오류가 발생했습니다</string>
    <string name="dialog_vote_confirm">투표완료</string>
    <string name="dialog_vote_num">%d명</string>
    <string name="dialog_vote_retry">재투표</string>
    <string name="dialog_vote_add_item">+ 항목추가하기</string>
    <string name="vote_num">투표인원</string>
    <string name="no_vote">진행중인 투표가 없습니다.</string>
    <string name="enter_new_item">항목 입력</string>
    <string name="group_main">MAIN</string>
    <string name="group_category">카테고리</string>
    <string name="group_vote">투표</string>
    <string name="group_member">멤버</string>
    <string name="group_diet">오늘의 식단✨</string>
    <string name="group_date">날짜</string>
    <string name="group_diet_kind">잡곡밥 | 호박잎된장국 | 꽁치구이 | 미역초무침 | 배추김치</string>
    <string name="group_finding_mate">MATE를 찾아요!</string>
    <string name="group_find_mate">MATE 찾기</string>
    <string name="group_mate_title">국밥 드실분</string>
    <string name="group_mate_restaurant">할매 국밥</string>
    <string name="group_time" tools:ignore="TypographyDashes">12:00-12:40</string>
    <string name="group_mate_limit_people">5</string>
    <string name="group_member_review">멤버 후기</string>
    <string name="group_recommend_restaurant">추천 맛집!</string>
    <string name="group_view_more">더보기</string>
    <string name="group_main_mate_matching">매칭중</string>
    <string name="group_main_mate_matching_end">매칭 완료</string>
    <string name="group_main_no_mate_matching">MATE</string>
    <string name="group_main_no_mate_matching_txt">현재 진행중인</string>
    <string name="make_group_suggest1">다양한 GROUP을</string>
    <string name="make_group_suggest2">만들어&#160;</string>
    <string name="make_group_suggest3">EAT-TOO&#160;</string>
    <string name="make_group_suggest4">해보세요&#160;</string>
    <string name="many_groups_possible">여러개의 그룹을 만들 수 있어요!</string>
</resources>