<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/main_btm_nav_home_item_selector"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/home"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/suggestionFragment"
        android:icon="@drawable/main_btm_nav_suggestion_item_selector"
        app:showAsAction="always"
        android:title="@string/suggestion" />
    <item
        android:id="@+id/wishlistFragment"
        android:icon="@drawable/main_btm_nav_wishlist_item_selector"
        app:showAsAction="always"
        android:title="@string/wishlist" />
    <item
        android:id="@+id/myPageFragment"
        android:icon="@drawable/main_btm_nav_my_page_item_selector"
        app:showAsAction="always"
        android:title="@string/myPage" />

</menu>