<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".src.main.create_group.CreateGroupActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp">

        <com.example.eatoo.custom_view.CustomToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetStart="0dp"
            app:leftIcon="@drawable/ic_baseline_arrow_back_24"
            app:titleText="@string/create_group_toolbar" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_group_suggest1"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_group_suggest2"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_group_name"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_group_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/create_group_name_suggest"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_group_color"
        android:textColor="@color/black" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_group_color1"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedIconEnabled="false"
            app:chipEndPadding="-10dp"
            app:chipIcon="@drawable/color_chip1"
            app:chipStartPadding="4dp"
            app:closeIconEnabled="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_group_color2"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedIconEnabled="false"
            app:chipEndPadding="-10dp"
            app:chipIcon="@drawable/color_chip2"
            app:chipStartPadding="4dp"
            app:closeIconEnabled="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_group_color3"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedIconEnabled="false"
            app:chipEndPadding="-10dp"
            app:chipIcon="@drawable/color_chip3"
            app:chipStartPadding="4dp"
            app:closeIconEnabled="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_group_color4"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedIconEnabled="false"
            app:chipEndPadding="-10dp"
            app:chipIcon="@drawable/color_chip4"
            app:chipStartPadding="4dp"
            app:closeIconEnabled="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_group_color5"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedIconEnabled="false"
            app:chipEndPadding="-10dp"
            app:chipIcon="@drawable/color_chip5"
            app:chipStartPadding="4dp"
            app:closeIconEnabled="false" />


    </com.google.android.material.chip.ChipGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_group_keyword"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_group_location"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_search_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="주소를 입력해주세요." />


        <LinearLayout
            android:id="@+id/ll_container_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible">

    <fragment
        android:id="@+id/frag_create_group_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_group_register"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>