<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="275dp"
    android:layout_height="255dp"
    android:padding="20dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_makegroup_exp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_group_suggest1"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_makegroup_exp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_group_suggest2"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintTop_toBottomOf="@+id/tv_makegroup_exp1"
        app:layout_constraintStart_toStartOf="@+id/tv_makegroup_exp1"/>
    <TextView
        android:id="@+id/tv_makegroup_exp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_group_suggest3"
        android:textSize="16sp"
        android:textColor="@color/main_orange"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintTop_toBottomOf="@+id/tv_makegroup_exp1"
        app:layout_constraintStart_toEndOf="@+id/tv_makegroup_exp2"/>
    <TextView
        android:id="@+id/tv_makegroup_exp4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_group_suggest4"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintTop_toBottomOf="@+id/tv_makegroup_exp1"
        app:layout_constraintStart_toEndOf="@+id/tv_makegroup_exp3"/>

    <TextView
        android:id="@+id/tv_make_many_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/many_groups_possible"
        android:textSize="16sp"
        android:textColor="@color/main_orange"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_makegroup_exp2"
        app:layout_constraintStart_toStartOf="@+id/tv_makegroup_exp1"/>

    <ImageView
        android:id="@+id/iv_add_group"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_baseline_add_circle_24"/>


</androidx.constraintlayout.widget.ConstraintLayout>