<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.makeus.eatoo.custom_view.CustomToolbar
            android:id="@+id/custom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="19dp"
            app:contentInsetStart="0dp"
            app:titleText="@string/wishlist_store" />

    </androidx.cardview.widget.CardView>

    <HorizontalScrollView
        android:id="@+id/hsv_category_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="25dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/cardview_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <RadioGroup
            android:id="@+id/rd_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rd_btn_ko"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:layout_marginEnd="11dp"
                android:background="@drawable/selector_category"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:checked="true"
                android:text="@string/category_korean_food"
                android:textColor="@drawable/selector_category_text" />

            <RadioButton
                android:id="@+id/rd_btn_ch"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:layout_marginEnd="11dp"
                android:background="@drawable/selector_category"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/category_chinese_food"
                android:textColor="@drawable/selector_category_text" />

            <RadioButton
                android:id="@+id/rd_btn_jp"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:layout_marginEnd="11dp"
                android:background="@drawable/selector_category"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/category_japanese_food"
                android:textColor="@drawable/selector_category_text" />

            <RadioButton
                android:id="@+id/rd_btn_western"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:layout_marginEnd="11dp"
                android:background="@drawable/selector_category"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/category_western_food"
                android:textColor="@drawable/selector_category_text" />

            <RadioButton
                android:id="@+id/rd_btn_street"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:layout_marginEnd="11dp"
                android:background="@drawable/selector_category"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/category_street_food"
                android:textColor="@drawable/selector_category_text" />

            <RadioButton
                android:id="@+id/rd_btn_asian"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:layout_marginEnd="11dp"
                android:background="@drawable/selector_category"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/category_asian_food"
                android:textColor="@drawable/selector_category_text" />

            <RadioButton
                android:id="@+id/rd_btn_desert"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:layout_marginEnd="11dp"
                android:background="@drawable/selector_category"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/category_desert_food"
                android:textColor="@drawable/selector_category_text" />

            <RadioButton
                android:id="@+id/rd_btn_etc"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:layout_marginEnd="11dp"
                android:background="@drawable/selector_category"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/category_etc_food"
                android:textColor="@drawable/selector_category_text" />

        </RadioGroup>
    </HorizontalScrollView>

    <Spinner
        android:id="@+id/spinner_wishlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="11dp"
        android:singleLine="true"
        android:spinnerMode="dropdown"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@id/rv_wishlist"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_wishlist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="74.8dp"
        app:layout_constraintTop_toBottomOf="@id/hsv_category_list"
        app:layout_constraintBottom_toBottomOf="parent"
        android:overScrollMode="never"/>

    <LinearLayout
        android:id="@+id/ll_no_wishlist_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:visibility="visible"
        android:layout_marginTop="67dp"
        app:layout_constraintTop_toBottomOf="@id/hsv_category_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/iv_no_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group_239" />


        <TextView
            android:id="@+id/tv_no_result1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_wishlist"
            android:textSize="10sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/input_hint"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>